<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_menu_description">Actions Menu</string>
    <string name="accessibility_menu_item_done">Done</string>
    <string name="accessibility_menu_item_move_down">Move down</string>
    <string name="accessibility_menu_item_move_left">Move left</string>
    <string name="accessibility_menu_item_move_right">Move right</string>
    <string name="accessibility_menu_item_move_up">Move up</string>
    <string name="action_apps_view">Apps</string>
    <string name="action_configure_channels">Customize channels</string>
    <string name="add">Add to Home screen</string>
    <string name="add_app_link_label">Approve app addition</string>
    <string name="add_channels_announcement">Select an application</string>
    <string name="add_channels_title">Customize channels</string>
    <string name="app_category">Category: %1$s</string>
    <string name="app_folder_title">Apps</string>
    <string name="app_name">Android TV Home</string>
    <string name="app_unavailable">Application unavailable</string>
    <string name="apps_view_title">Apps</string>
    <string name="cancel">Cancel</string>
    <string name="category_action_games">Action Games</string>
    <string name="category_adventure_games">Adventure Games</string>
    <string name="category_arcade_games">Arcade Games</string>
    <string name="category_art_and_design">Art &amp; Design</string>
    <string name="category_auto_and_vehicles">Auto &amp; Vehicles</string>
    <string name="category_beauty">Beauty</string>
    <string name="category_board_games">Board Games</string>
    <string name="category_books_and_reference">Books &amp; Reference</string>
    <string name="category_business">Business</string>
    <string name="category_card_games">Card Games</string>
    <string name="category_casino_games">Casino Games</string>
    <string name="category_casual_games">Casual Games</string>
    <string name="category_comics">Comics</string>
    <string name="category_communication">Communication</string>
    <string name="category_dating">Dating</string>
    <string name="category_education">Education</string>
    <string name="category_educational_games">Educational Games</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_events">Events</string>
    <string name="category_finance">Finance</string>
    <string name="category_food_and_drink">Food &amp; Drink</string>
    <string name="category_health_and_fitness">Health &amp; Fitness</string>
    <string name="category_house_and_home">House &amp; Home</string>
    <string name="category_libraries_and_demo">Libraries &amp; Demo</string>
    <string name="category_lifestyle">Lifestyle</string>
    <string name="category_maps_and_navigation">Maps &amp; Navigation</string>
    <string name="category_medical">Medical</string>
    <string name="category_music_and_audio">Music &amp; Audio</string>
    <string name="category_music_games">Music Games</string>
    <string name="category_news_and_magazines">News &amp; Magazines</string>
    <string name="category_parenting">Parenting</string>
    <string name="category_personalization">Personalization</string>
    <string name="category_photography">Photography</string>
    <string name="category_productivity">Productivity</string>
    <string name="category_puzzle_games">Puzzle Games</string>
    <string name="category_racing_games">Racing Games</string>
    <string name="category_role_playing_games">Role Playing Games</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_simulation_games">Simulation Games</string>
    <string name="category_social">Social</string>
    <string name="category_sport_games">Sport Games</string>
    <string name="category_sports">Sports</string>
    <string name="category_strategy_games">Strategy Games</string>
    <string name="category_tools">Tools</string>
    <string name="category_travel_and_local">Travel &amp; Local</string>
    <string name="category_trivia_games">Trivia Games</string>
    <string name="category_video_players_and_editors">Video Players &amp; Editors</string>
    <string name="category_weather">Weather</string>
    <string name="category_word_games">Word Games</string>
    <string name="channel_action_remove">Remove</string>
    <string name="channel_temporarily_hidden_message">This channel is empty and will be temporarily hidden until more programs are available.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="content_rating_with_subrating_1">%1$s, %2$s</string>
    <string name="content_rating_with_subrating_2">%1$s, %2$s, %3$s</string>
    <string name="content_rating_with_subrating_3">%1$s, %2$s, %3$s, %4$s</string>
    <string name="content_rating_with_subrating_4">%1$s, %2$s, %3$s, %4$s, %5$s</string>
    <string name="content_rating_with_subrating_5">%1$s, %2$s, %3$s, %4$s, %5$s, %6$s</string>
    <string name="content_rating_with_unlimited_subrating">%1$s, %2$s</string>
    <string name="content_rating_without_subrating">%1$s</string>
    <string name="context_menu_can_not_move_text">Can’t move</string>
    <string name="context_menu_can_not_remove_text">Can’t remove from favorites</string>
    <string name="context_menu_description">Context Menu</string>
    <string name="context_menu_favorite_text">Add to favorites</string>
    <string name="context_menu_info_text">Info</string>
    <string name="context_menu_move_text">Move</string>
    <string name="context_menu_primary_action_text">Open</string>
    <string name="context_menu_unfavorite_text">Remove from favorites</string>
    <string name="context_menu_uninstall_text">Uninstall</string>
    <string name="copy">Copy</string>
    <string name="customize_app_order_action_title">Reorder apps</string>
    <string name="customize_game_order_action_title">Reorder games</string>
    <string name="description_age_10">Recommended for ages 10 and over.</string>
    <string name="description_age_11">Recommended for ages 11 and over.</string>
    <string name="description_age_12">Recommended for ages 12 and over.</string>
    <string name="description_age_13">Recommended for ages 13 and over.</string>
    <string name="description_age_14">Recommended for ages 14 and over.</string>
    <string name="description_age_15">Recommended for ages 15 and over.</string>
    <string name="description_age_16">Recommended for ages 16 and over.</string>
    <string name="description_age_17">Recommended for ages 17 and over.</string>
    <string name="description_age_18">Recommended for ages 18 and over.</string>
    <string name="description_age_19">Recommended for ages 19 and over.</string>
    <string name="description_age_20">Recommended for ages 20 and over.</string>
    <string name="description_age_4">Recommended for ages 4 and over.</string>
    <string name="description_age_5">Recommended for ages 5 and over.</string>
    <string name="description_age_6">Recommended for ages 6 and over.</string>
    <string name="description_age_7">Recommended for ages 7 and over.</string>
    <string name="description_age_8">Recommended for ages 8 and over.</string>
    <string name="description_age_9">Recommended for ages 9 and over.</string>
    <string name="description_ar_tv_atp">Suitable for all audiences. Programs may contain mild violence, language and mature situations.</string>
    <string name="description_ar_tv_d">Drugs</string>
    <string name="description_ar_tv_s">Sex</string>
    <string name="description_ar_tv_sam_13">Suitable for ages 13 and up. Programs may contain mild to moderate language and mild violence and sexual references.</string>
    <string name="description_ar_tv_sam_16">Suitable for ages 16 and up. Programs may contain more intensive violence and coarse language, partial nudity and moderate sexual references.</string>
    <string name="keyboard_search_accessibility_hint">Select to type your search query</string>
    <string name="mic_disabled_icon_content_description">Hands-free microphone is muted.</string>
    <string name="mic_search_accessibility_hint">Select to speak your search query</string>
    <string name="open">Open</string>
    <string name="search_hint_text">Search movies, TV, and more</string>
</resources>