<?xml version="1.0" encoding="utf-8"?>
<com.google.android.tvlauncher.view.SearchView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:clipChildren="false"
    android:contentDescription="@string/search_hint_text"
    android:focusable="false"
    android:importantForAccessibility="no">

    <LinearLayout
        android:id="@+id/search_orb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="left|center_vertical|center_horizontal|center|start"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/orbs_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:focusable="false">

            <FrameLayout
                android:id="@+id/keyboard_orb_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/mic_orb"
                android:clipChildren="false"
                android:focusable="false">

                <com.google.android.tvlauncher.view.SearchOrb
                    android:id="@+id/keyboard_orb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clipToPadding="false"
                    android:contentDescription="@string/keyboard_search_accessibility_hint"
                    android:paddingStart="@dimen/search_orb_keyboard_icon_padding_start"
                    android:paddingTop="@dimen/search_orb_icon_padding_top"
                    android:paddingEnd="@dimen/search_orb_icon_padding_end"
                    android:paddingBottom="@dimen/search_orb_icon_padding_bottom"
                    android:soundEffectsEnabled="false"
                    android:visibility="invisible" />
            </FrameLayout>

            <com.google.android.tvlauncher.view.SearchOrb
                android:id="@+id/mic_orb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:clipToPadding="false"
                android:contentDescription="@string/mic_search_accessibility_hint"
                android:paddingStart="@dimen/search_orb_mic_icon_padding_start"
                android:paddingTop="@dimen/search_orb_icon_padding_top"
                android:paddingEnd="@dimen/search_orb_icon_padding_end"
                android:paddingBottom="@dimen/search_orb_icon_padding_bottom"
                android:soundEffectsEnabled="false" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no">

            <ImageView
                android:id="@+id/mic_disabled_icon"
                android:layout_width="@dimen/mic_disabled_icon_size"
                android:layout_height="@dimen/mic_disabled_icon_size"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/mic_disabled_icon_margin"
                android:layout_marginEnd="@dimen/mic_disabled_icon_margin"
                android:clickable="false"
                android:contentDescription="@string/mic_disabled_icon_content_description"
                android:focusable="false"
                android:src="@drawable/ic_mic_mute_indicator"
                android:tint="@color/secondary_text_color"
                android:visibility="invisible" />

            <TextSwitcher
                android:id="@+id/text_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_text_margin_start"
                android:focusable="false"
                android:importantForAccessibility="noHideDescendants"
                android:measureAllChildren="false" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.tvlauncher.view.SearchView>
