<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/applink_dialog_padding_start"
    android:paddingTop="@dimen/applink_dialog_padding_top"
    android:paddingEnd="@dimen/applink_dialog_padding_end"
    android:paddingBottom="@dimen/applink_dialog_padding_bottom"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/applink_dialog_content_margin_bottom"
        android:minHeight="@dimen/applink_dialog_content_min_height">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="@dimen/applink_dialog_app_icon_width"
                android:layout_height="@dimen/applink_dialog_app_icon_height"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/applink_dialog_icon_margin_end"
                android:layout_marginBottom="@dimen/applink_dialog_icon_margin_bottom" />

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/applink_dialog_title_margin_top"
                android:layout_marginBottom="@dimen/applink_dialog_title_margin_bottom"
                android:layout_toEndOf="@+id/app_icon"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:textColor="@color/reference_white_100"
                android:textSize="@dimen/applink_dialog_title_text_size" />

            <TextView
                android:id="@+id/app_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_title"
                android:layout_toEndOf="@+id/app_icon"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:textColor="@color/reference_white_100"
                android:textSize="@dimen/text_size_h4" />

            <TextView
                android:id="@+id/app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_icon"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/applink_dialog_description_margin_bottom"
                android:ellipsize="end"
                android:maxLines="4"
                android:textColor="@color/reference_white_70"
                android:textSize="@dimen/text_size_h3" />

            <TextView
                android:id="@+id/app_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_description"
                android:layout_alignParentStart="true"
                android:textColor="@color/reference_white_70"
                android:textSize="@dimen/text_size_h4" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/app_screenshot"
            android:layout_width="@dimen/applink_dialog_screenshot_width"
            android:layout_height="@dimen/applink_dialog_screenshot_height"
            android:layout_marginStart="@dimen/applink_dialog_screenshot_margin_start"
            android:layout_weight="0"
            android:scaleType="centerInside"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/open_button"
            style="@style/ConfirmationDialog.ApplinkActionItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open" />

        <Button
            android:id="@+id/allow_button"
            style="@style/ConfirmationDialog.ApplinkActionItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/deny_button"
            style="@style/ConfirmationDialog.ApplinkActionItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
